fix styling for hero text on mobile (#26)

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -237,10 +237,10 @@ body {
     text-align: center;
     width: 75vw;
     -webkit-overflow-scrolling: touch; }
+  @media screen and (max-width: 480px) {
+    .hero .hero-text {
+      width: 100vw; } }
 
-@media screen and (max-width: 480px) {
-  .hero-text {
-    width: 100vw; } }
 #navBar {
   box-sizing: border-box; }
 
